@@ -3,6 +3,10 @@ package com.dragontalker.java1;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * 测试MinorGC, MajorGC, FullGC
+ * -Xms9m -Xmx9m -XX:+PrintGCDetails
+ */
 public class GCTest {
     public static void main(String[] args) {
         int i = 0;
